<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="2">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:visibility="visible"
        app:lottie_rawRes="@raw/signup"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:background="@drawable/layout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Signup"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:paddingRight="40dp"
            android:paddingBottom="20dp"
            android:weightSum="7">

            <EditText
                android:id="@+id/s_username"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/text"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/s_email_number"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/text"
                android:drawableLeft="@drawable/ic_baseline_local_phone_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:hint="@string/email_or_number"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/s_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/text"
                android:drawableLeft="@drawable/ic_baseline_lock_open_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/s_cnfpassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/text"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/userType"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/text"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2"
                android:paddingRight="5dp">

                <RadioButton
                    android:id="@+id/imChild"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:buttonTint="@color/white"
                    android:text="@string/i_am_child"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/imParent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:buttonTint="@color/white"
                    android:text="@string/i_am_parent"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RadioGroup>

            <EditText
                android:id="@+id/s_childUser"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/text"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:hint="@string/child_username"
                android:inputType="textPersonName"
                android:paddingLeft="16dp"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/Signup"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="sans"
                android:background="@drawable/btn"
                app:cornerRadius="4dp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>