<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            android:id="@+id/card_alllog">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/all"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/logs"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/all"
                    android:text="@string/all_logs"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            android:id="@+id/card_calllog">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/call"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/call"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/call_log"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/call"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            android:id="@+id/card_smslog">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/sms"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/sms"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/msg_log"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/sms"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            android:id="@+id/card_notifylog">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/notify"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/notify"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/notify_log"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/notify"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            android:id="@+id/card_loclog">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/location"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/locationlog"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/location_log"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/location"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            android:id="@+id/card_curlog">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/curlocation"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/location"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/current_location"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/curlocation"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            android:id="@+id/card_children">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/children"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/children"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/children"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/children"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            android:id="@+id/card_prevent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/prevention"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/usage"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/app_usage"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/prevention"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>